<resources>
    <string name="app_name">Food App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="size_add_to_cart">Size</string>
    <string name="medium_add_to_cart">Medium</string>
    <string name="large_add_to_cart">Large</string>
    <string name="price_add_to_cart">Price</string>
    <string name="add_to_cart_btn">Add to cart</string>
    <string name="change_cart">Change</string>
    <string name="address_cart">Address :</string>
    <string name="phone_cart">Phone :</string>
    <string name="paymentsummary_cart">PaymentSummary</string>
    <string name="sub_total_cart">Sub Total</string>
    <string name="delivery_and_fee_cart">Delivery And Fee</string>
    <string name="total_price_cart">Total Price</string>
    <string name="ready_for_eat_cart">Ready For Eat</string>
    <string name="cart_is_empty_cart">Cart Is Empty</string>
    <string name="burger_home">Burger</string>
    <string name="pizza_home">Pizza</string>
    <string name="fried_chicken_home">Fried Chicken</string>
    <string name="salad_home">Salad</string>
    <string name="drinks_home">Drinks</string>
    <string name="popular_home">Popular</string>
    <string name="offers_home">Offers</string>
    <string name="name_profile">Name</string>
    <string name="address_profile">Address</string>
    <string name="phone_profile">Phone</string>
    <string name="save_profile">Save</string>
</resources>