<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <import type="com.example.foodapp.utils.DoubleConverter"/>
        <variable
            name="meal"
            type="com.example.foodapp.model.MenuData" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back_ground"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.denzcoskun.imageslider.ImageSlider
                    android:id="@+id/imageSlider"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/burger"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txt_name_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{meal.name}"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card" />

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text= "@{meal.description}"
            android:textSize="17sp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_name_add" />

        <TextView
            android:id="@+id/txt_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size_add_to_cart"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_description" />

        <Button
            android:id="@+id/btn_medium"
            android:layout_width="98dp"
            android:layout_height="43dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="24dp"
            android:text="@string/medium_add_to_cart"
            app:layout_constraintStart_toEndOf="@+id/txt_size"
            app:layout_constraintTop_toBottomOf="@+id/txt_description"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btn_large"
            android:layout_width="98dp"
            android:layout_height="43dp"
            android:layout_marginStart="60dp"
            android:text="@string/large_add_to_cart"
            app:layout_constraintStart_toEndOf="@+id/btn_medium"
            app:layout_constraintTop_toTopOf="@+id/btn_medium"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_medium">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image_add"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="40dp"
                    app:layout_constraintEnd_toEndOf="@+id/btn_add_to_cart"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/pluscart" />

                <TextView
                    android:id="@+id/number_of_meal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="1"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/image_add"
                    app:layout_constraintEnd_toStartOf="@+id/image_add"
                    app:layout_constraintTop_toTopOf="@+id/image_add" />

                <ImageView
                    android:id="@+id/image_minus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/image_add"
                    app:layout_constraintEnd_toStartOf="@+id/number_of_meal"
                    app:layout_constraintTop_toTopOf="@+id/image_add"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/minuscart" />

                <TextView
                    android:id="@+id/txt_price_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/price_add_to_cart"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/number_of_meal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/number_of_meal" />

                <TextView
                    android:id="@+id/price_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@{DoubleConverter.doubleToString(meal.price)}"
                    android:textColor="@color/black"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_price_add" />

                <Button
                    android:id="@+id/btn_add_to_cart"
                    android:layout_width="300dp"
                    android:layout_height="43dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/recaddtocart"
                    android:text="@string/add_to_cart_btn"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/price_add"
                    tools:ignore="TouchTargetSizeCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>